# NewsPapersHub

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  service_entry.py
.github/workflows/: release.yml
alembic/: env.py
alembic/versions/: 002c24c058cc_add_full_name_to_subscriber.py  a16e83d14c21_add_broadcast_columns_to_tasks.py  dd215b000db6_add_subscribers_table.py
app/: main.py
app/api/: deps.py
app/api/v1/: dawn.py  dawn_rss.py  endpoints.py  subscribers.py  tasks.py  thenews.py  whatsapp.py  ws.py
app/core/: config.py  database.py  logging.py  task_manager.py
app/models/: database_models.py  schemas.py
app/schemas/: schemas.py
app/services/: dawn_rss_service.py  dawn_service.py  newspaper_service.py  pdf_service.py  rss_service.py  scheduler_service.py  scraper_service.py  subscribers_service.py  task_manager_service.py  thenews_service.py  whatsapp_service.py
app/services/pdf_builder_service/: __init__.py  base_builder.py  builder.py  dawn_builder.py  factory.py  styles.py
app/utils/: __init__.py  date_utils.py  path_utils.py  user_utils.py
deployment/: newspaper-sender.service  newspapershub.service  supervisord.conf
electron/: error.html  main.js  package-lock.json  package.json  preload.js  splash.html
scripts/: send_now.py  show_logs.py  whatsapp_register.py
