[project]
name = "newspapershub"
version = "0.1.0"
description = "Automated Pakistani newspaper PDF generation and WhatsApp delivery"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-dotenv>=1.0.1",
    "pydantic>=2.7.0",
    "playwright",
    "beautifulsoup4",
    "reportlab>=4.2.0",
    "feedparser>=6.0.11",
    "Pillow>=10.3.0",
    "aiohttp",
    "sqlalchemy",
    "aiosqlite",
    "httpx>=0.28.1",
    "schedule>=1.2.2",
    "neonize",
    "alembic>=1.13.1",
    "structlog>=25.5.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
